Update Java compiler properties to 21